--- a/base.css
+++ b/base.css
@@ -20,11 +20,11 @@ body {
 }
 .menu {
     width: 15%;
-    background-color: aqua;
+    background-color: #e39e9d;
     padding: 10px 20px 0px;
 }
 .header {
-    background-color: rgb(5, 108, 108);
+    background-color: black;
     min-height: 150px;
 }
 .content {
@@ -33,6 +33,6 @@ body {
     padding: 20px;
 }
 .footer {
-    background-color: rgb(99, 56, 240);
+    background-color: #e77c7a;
     min-height: 150px;
 }
